[package]
name = "codecrafters-shell"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
libc = "0.2.172"
nix = { version = "0.30.1", features = ["process", "fs"] }
rustyline = "15.0.0"
thiserror = "1.0.38"                             # error handling
